# 20_1_write_to_statement

./: CMakeLists.txt  README.md  date_checker.cpp  main.cpp  statement.txt
include/: date_checker.h
src/: CMakeLists.txt  date_checker.cpp  main.cpp
